--- a/Отчёт.tex
+++ b/Отчёт.tex
@@ -5,6 +5,29 @@
 
 \begin{document}
 
+\section*{Аннотация}
+
+Цель работы — создание инструментов для автоматического написания программ с
+помощью генетических алгоритмов.
+
+Современные программы не изменяют сами себя. Практически весь процесс создания
+ПО привязан к человеку-разработчику. Однако наблюдение за живой природой
+показывают нам, что объект может динамически саморазвиваться, чтобы лучше
+соответствовать внешним условиям и поставленным перед ним целям.
+
+Органическая жизнь саморазвивается с помощью эволюции, биологической реализации
+генетических алгоритмов. Они активно применяются в информационных технологиях и
+изучены на достаточном уровне, чтобы применить их для саморазвития алгоритмов
+программного обеспечения.
+
+В основе генетических алгоритмов лежат случайные изменения, смешивания и отбор.
+К сожалению, реализация первых двух действий для исходного или машинного кода 
+программ неэффективна. Поэтому выгодно представить алгоритм в более удобном
+виде.
+
+В данной работе будут рассмотрены существующие способы эволюции алгоритмов и
+показан новый способ, более эффективный для представленных целей.
+
 \newpage
 \tableofcontents
 
