Добавлена Постановка задачи

--- a/Отчёт.tex
+++ b/Отчёт.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper,14pt]{extarticle}
 \usepackage[utf8]{inputenc}
 \usepackage[russian]{babel}
+
 \renewcommand{\baselinestretch}{1.5}
 
 \begin{document}
@@ -30,5 +31,19 @@
 
 \newpage
 \tableofcontents
+
+\newpage
+\section{Постановка задачи}
+Разработчик формулирует требование к алгоритму $a$ в виде оценочной
+функции $T$, так чтобы более подходящий для задачи алгоритм давал больший
+результат $T(a)$. Разработчик также предоставляет функцию останова $F$, такую,
+что $F(T(a))$ вернёт 1, если алгоритм $a$ полностью подходит и цель разработки
+достигнута.
+
+Цель данной работы, предоставить функцию $G(T, F) = a$, которая вернёт алгоритм подходящий разработчику.
+
+Важным требованием в работе является то, чтобы итоговый алгоритм был понятен
+человеку и весь процесс его генерации можно было наглядно представить и
+анализировать.
 
 \end{document}
