Добавлено описание генетических алгоритмов

--- a/Отчёт.tex
+++ b/Отчёт.tex
@@ -46,4 +46,32 @@
 человеку и весь процесс его генерации можно было наглядно представить и
 анализировать.
 
+\newpage
+\section{Генетические алгоритмы}
+Как мы видим, задача сводится к оптимизации функции $T(a)$. Однако характер этой
+функции неизвестен. Для подобных задач оптимизации весьма
+эффективны генетические алгоритмы.
+
+Генетический алгоритм $G_{ga}$ работает сразу с множеством кандидатов на решение
+(популяцией) $A = [a_1, a_2, …, a_n]$. Это итерационный процесс и каждый шаг
+$A_i = G_{ga}(A_{i-1})$ немного улучшает оценочную функцию (за значение
+оценочной функции популяции, принимается оценочная функция лучшего члена
+популяции).
+
+Каждая итерация $G_{ga}(A) = S(Mi(Mu(R(A))))$ состоит из операций:
+\begin{enumerate}
+  \item Размножения $R(A)$ — увеличения популяции простым копированием.
+        Поскольку последующий отбор уменьшит популяцию, размножение поддерживает
+        её размер на каждом шаге.
+  \item Мутации $Mu(A)$ — случайного изменения элементов.
+  \item Смешивания $Mi(A)$ — объединения двух элементов со случайным выбором
+        частей из каждой половины.
+  \item Отбора $S(A)$ — удаление наименее подходящих кандидатов. Для этого для
+        каждого элемента популяции вычисляется оценочная функция и элементы с
+        наименьшим её значением изымаются из множества.
+\end{enumerate}
+
+В конце каждой итерации с помощью функции отбора $F(A)$, которую задаёт разработчик,
+определяется нужно ли остановить цикл.
+
 \end{document}
