Изменены отступы на странице

--- a/Отчёт.tex
+++ b/Отчёт.tex
@@ -4,6 +4,12 @@
 
 \renewcommand{\baselinestretch}{1.5}
 
+\usepackage{geometry}
+\geometry{left=3cm}
+\geometry{right=2cm}
+\geometry{top=2cm}
+\geometry{bottom=2cm}
+
 \begin{document}
 
 \section*{Аннотация}
