Добавлена Актуальность темы

--- a/Отчёт.tex
+++ b/Отчёт.tex
@@ -39,6 +39,61 @@
 \tableofcontents
 
 \newpage
+\section{Актуальность темы}
+
+\subsection{Авто-написание программы}
+Для того, чтобы программа была автоматически написана, разработчик должен
+описать требования к ней в виде оценочной функции. К сожалению, для большинства
+бытовых задач, написание подходящей оценочной функции сложнее, чем
+разработка самой программы.
+
+Но есть области информационных технологий, где создание программы невероятно
+сложно, а описание требований к ней — простое:
+\begin{itemize}
+  \item Программирование сложных систем, состоящих из автономных объектов
+        взаимодействующих друг с другом. Например, группировка относительно
+        простых спутников. Такие сложные системы очень надёжны (выход одного
+        элемента лишь немного уменьшает мощность множества) и эффективны (из-за
+        параллельной работы).
+  \item Поиск оптимальных стратегий, который востребован теорией игр,
+        макроэкономикой и эволюционной биологией.
+\end{itemize}
+
+Поиск решений для данных задач довольно трудоёмок и сейчас слишком похож на
+метод проб и ошибок. Например, чтобы найти оптимальную стратегию в Повторяющейся
+дилемме заключённого, её автор, Роберт Аксельрод, просто пригласил знакомых
+коллег со всего мира предложить своё решение и выбрал лучшее.
+
+Автоматическая разработка программ способна заменить человека в этом сложном,
+долгом и не интересном поиске.
+
+Поскольку сложные системы, теория игр, макроэкономика и эволюционная биология
+являются очень востребованными областями науки, то и инструмент для них будет
+очень актуален.
+
+\subsection{Саморазвитие программы}
+В данный момент изменения в алгоритм программы вносит её разработчик. Тогда,
+когда это экономически неоправданно или невозможно, алгоритм делают зависимым
+от констант и конечные пользователи или автоматика меняют эти настройки.
+
+Однако, параметры статически заданного алгоритма не могут дать полную гибкость,
+что бывает нередко нужно. Например, спамеры постоянно экспериментируют и нередко
+обходят защиту спам-фильтров, в итоге программистам снова приходится
+анализировать методы новой массовой рекламы и переписывать алгоритмы защиты.
+
+Саморазвитие программ будет очень актуально для:
+\begin{itemize}
+  \item Защиты от спама, чтобы автоматически подстраиваться под новые уловки,
+        когда пользователь отмечает письмо как рекламное.
+  \item Алгоритмов противника в компьютерных играх, чтобы подстраиваться под
+        способности и навыки игрока.
+  \item Автоматических роботов, чтобы изменять программу управления при
+        поломках и других непредвиденных ситуациях. Это особенно полезно в
+        областях, где человек не может прийти ему на помощь, а связь
+        затрудненна, например, в космосе.
+\end{itemize}
+
+\newpage
 \section{Постановка задачи}
 Разработчик формулирует требование к алгоритму $a$ в виде оценочной
 функции $T$, так чтобы более подходящий для задачи алгоритм давал больший
