Добавлен обзор конечных автоматов

--- a/Отчёт.tex
+++ b/Отчёт.tex
@@ -177,6 +177,26 @@ $x_{ij}$ соответствует весу связи от нейрона $i$ 
 К сожалению, человек не может понять алгоритм нейронной сети при беглом взгляде
 на матрицу или граф, что требуется в поставленной задаче.
 
+\subsection{Конечные автоматы}
+В рамках развития идей А. А. Шалыто автоматного программирования рассматривается
+генерация конечного автомата с помощью генетических алгоритмов.\cite{shalyto}
+
+Конечный автомат характеризуется множеством состояний и матрицей переходов $X$,
+где $x_{ji}$ содержит дискретный код условия при котором автомат перейдёт из
+состояний $i$ в состояние $j$.
+
+Матрица состояний преобразуется в битовую строку, с которой генетический
+алгоритм и работает: мутация случайно изменяет биты, смешивание объединяет две
+строки в одну, случайно выбрав символы из каждой.
+
+К сожалению, автоматы в поставленной задаче имеют недостатков:
+\begin{itemize}
+  \item Они не полны по Тьюрингу, что несколько ограничивает их гибкость.
+  \item Чтобы быть понятными разработчику их надо представить в виде графа, а
+        работа с графикой сложнее, чем с обычным текстом.
+\end{itemize}
+
+\newpage
 \section{Список литературы}
 
 \renewcommand*{\refname}{}
@@ -198,6 +218,10 @@ $x_{ij}$ соответствует весу связи от нейрона $i$ 
 
   \bibitem{neural}
     Haykin S. Neural Networks: A Comprehensive Foundation. 2nd Edition. -- M.: Prentice Hall, 1998
+
+  \bibitem{shalyto}
+    Царев Ф.Н., Шалыто А.А. Применение генетического программирования для
+    построения автоматов, управляющих системами со сложным поведением. — 2007
 
 \end{thebibliography}
 
