Более расписана постановка задачи

--- a/Отчёт.tex
+++ b/Отчёт.tex
@@ -101,11 +101,13 @@
 что $F(T(a))$ вернёт 1, если алгоритм $a$ полностью подходит и цель разработки
 достигнута.
 
-Цель данной работы, предоставить функцию $G(T, F) = a$, которая вернёт алгоритм подходящий разработчику.
+Цель данной работы, предоставить инструментарий для разработчика, реализующий
+операцию $G(T, F) = a$, которая генерирует алгоритм $a$, получающий максимальное
+значение в оценочной функции $T$ и удовлетворяющий критерию останова $F$.
 
-Важным требованием в работе является то, чтобы итоговый алгоритм был понятен
-человеку и весь процесс его генерации можно было наглядно представить и
-анализировать.
+Инструментарий будет использоваться для изучения генетических алгоритмов, так
+что важным требованием является то, чтобы итоговый алгоритм был понятен человеку
+и весь процесс его генерации можно было наглядно представить и анализировать.
 
 \newpage
 \section{Генетические алгоритмы}
