--- a/Отчёт.tex
+++ b/Отчёт.tex
@@ -191,7 +191,7 @@ $x_{ij}$ соответствует весу связи от нейрона $i$ 
 алгоритм и работает: мутация случайно изменяет биты, смешивание объединяет две
 строки в одну, случайно выбрав символы из каждой.
 
-К сожалению, автоматы в поставленной задаче имеют недостатков:
+К сожалению, для поставленной задачи автоматы имеют недостатков:
 \begin{itemize}
   \item Они не полны по Тьюрингу, что несколько ограничивает их гибкость.
   \item Чтобы быть понятными разработчику их надо представить в виде графа, а
