--- a/Отчёт.tex
+++ b/Отчёт.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper,14pt]{extarticle}
 \usepackage[utf8]{inputenc}
 \usepackage[russian]{babel}
+\usepackage{indentfirst}
 
 \renewcommand{\baselinestretch}{1.5}
 
