Упростил некоторые фразы

--- a/Отчёт.tex
+++ b/Отчёт.tex
@@ -29,14 +29,14 @@
 программного обеспечения.
 
 В основе генетических алгоритмов лежат случайные изменения, смешивания и отбор.
-К сожалению, реализация первых двух действий для исходного или машинного кода 
-программ неэффективна. Поэтому выгодно представить алгоритм в более удобном
-виде.
+К сожалению, не удобно применять случайные изменения и смешивания для исходного
+или машинного кода программ. Поэтому выгодно представить алгоритм в более
+удобном виде.
 
 В данной работе будут рассмотрены существующие способы эволюции алгоритмов и
-показан новый язык, более эффективный для представленной цели. В него создана
-виртуальная машина, макроязык задания требований к программе (оценочной
-функции) и инструментарий для настройки автоматического написания программ.
+показан новый язык, более эффективный для представленной цели. Для него создана
+виртуальная машина, макроязык требований к программе (оценочной функции) и
+инструменты для автоматического написания программ.
 
 \newpage
 \tableofcontents
@@ -109,8 +109,8 @@
 значение в оценочной функции $T$ и удовлетворяющий критерию останова $F$.
 
 Инструментарий будет использоваться для изучения генетических алгоритмов, так
-что важным требованием является то, чтобы итоговый алгоритм был понятен человеку
-и весь процесс его генерации можно было наглядно представить и проанализировать.
+что важно, чтобы итоговый алгоритм был понятен человеку и весь процесс его
+генерации можно было наглядно представить и проанализировать.
 
 \newpage
 \section{Генетические алгоритмы}
@@ -208,7 +208,7 @@ $x_{ij}$ соответствует весу связи от нейрона $i$ 
 
 Программа на $D^2NA$ с внешним миром общается с помощью входящих и исходящих
 сигналов. Они характеризуются только именем и не имеют параметров и
-продолжительности. Количество и имена сигналов напрямую зависят задачи и
+продолжительности. Количество и имена сигналов напрямую зависят от задачи и
 задаются разработчиком. Имя сигнала должно начинаться с двоеточия и заглавной
 буквы и может состоять из букв, цифр и знака подчёркивания (например,
 \texttt{:Input}).
@@ -222,7 +222,7 @@ $x_{ij}$ соответствует весу связи от нейрона $i$ 
 букв, цифр и знака подчёркивания (например, \texttt{:a}).
 
 Программа состоит из списка правил. Правило характеризуется условием выполнения
-и списком команд (правило можно представить в виде оператора if).Условие может
+и списком команд (правило можно представить в виде оператора if). Условие может
 быть двух видов: поступление определённого сигнала и значение определённой
 переменной больше 0. Поскольку имена сигналов и переменных отличаются и для
 них возможна только одна проверка, то условие записывается как \texttt{on} с
