Перенём Аннотацию в отдельный файл и поправил скрипт сборки

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -13,32 +13,6 @@
 
 \begin{document}
 
-\section*{Аннотация}
-
-Цель работы — создание инструментов для автоматического написания программ с
-помощью генетических алгоритмов.
-
-Современные программы не изменяют сами себя. Практически весь процесс создания
-ПО привязан к человеку-разработчику. Однако наблюдение за живой природой
-показывают нам, что объект может динамически саморазвиваться, чтобы лучше
-соответствовать внешним условиям и поставленным перед ним целям.
-
-Органическая жизнь саморазвивается с помощью эволюции, биологической реализации
-генетических алгоритмов. Они активно применяются в информационных технологиях и
-изучены на достаточном уровне, чтобы применить их для саморазвития алгоритмов
-программного обеспечения.
-
-В основе генетических алгоритмов лежат случайные изменения, смешивания и отбор.
-К сожалению, не удобно применять случайные изменения и смешивания для исходного
-или машинного кода программ. Поэтому выгодно представить алгоритм в более
-удобном виде.
-
-В данной работе будут рассмотрены существующие способы эволюции алгоритмов и
-показан новый язык, более эффективный для представленной цели. Для него создана
-виртуальная машина, макроязык требований к программе (оценочной функции) и
-инструменты для автоматического написания программ.
-
-\newpage
 \tableofcontents
 
 \newpage
@@ -279,9 +253,9 @@ end
 «родителей», формирует новую программу.
 
 Код программы $D^2NA$ представляется из себя обычный текст и очень похож на
-современные высокоуровневые языки программирования. Его легко понять понять
-разработчику, и к нему легко применять множество инструментов для анализа текста
-(например, смотреть различия с помощью UNIX-программы \texttt{diff}).
+современные языки программирования. Его легко понять понять разработчику,
+и к нему легко применять множество инструментов для анализа текста (например,
+смотреть различия с помощью UNIX-программы \texttt{diff}).
 
 \newpage
 \section{Список литературы}
