Добавил критерии выбора языка разработки

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -252,6 +252,36 @@ end
 и к нему легко применять множество инструментов для анализа текста (например,
 смотреть различия с помощью UNIX-программы \texttt{diff}).
 
+\section{Программная реализация}
+
+\subsection{Средства разработки}
+Для разработки $D^2NA$ требовался язык удовлетворяющий следующим критериям:
+\begin{itemize}
+  \item {\bf Скорость разработки}. Сначала нужно написать систему грубо и
+        максимально быстро для проверки идеи. А потом, в случае успеха, уже
+        можно оптимизировать систему и переписывать критические блоки на языки
+        более низкого уровня, такие как C или Java.
+  \item {\bf Гибкость.} Цель $D^2NA$ — создание инструмента для изучения и
+        экспериментов с генетическими алгоритмами, поэтому язык и платформа
+        должна быть гибкой, чтобы вносить изменения максимально быстро и легко.
+  \item {\bf Свободный синтаксис.} Желательно, чтобы синтаксис языка $D^2NA$ был
+        просто подсинтаксисом (DSL, Domain-Specific Language) языка разработки
+        генератора, чтобы не писать отдельный интерпретатор.
+  \item {\bf Кроссплатформенностью.} Язык разработки не должен быть привязан к
+        определённой операционной системе или интегрированной среде разработки.
+        Результат работы должен запускаться на любой из распространённой
+        операционной системе (Windows, Mac OS X, Linux) без перекомпиляции.
+        Желательно, чтобы разработку можно было вести использую обычный
+        текстовой редактор и простой набор скриптов.
+  \item {\bf Автоматическое тестирование.} Поскольку в рамках проекта
+        разрабатывался набор утилит (а не конечный продукт с графическим
+        интерфейсом пользователя), то лучше всего подходит автоматическое
+        тестирование, желательно с применение подхода BDD (Behavior Driven
+        Development).
+\end{itemize}
+
+Для поставленных задач лучше всего подходил язык Ruby версии 1.9.
+
 \newpage
 \section{Список литературы}
 
