Добавил описание языка Ruby

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -282,6 +282,117 @@ end
 
 Для поставленных задач лучше всего подходил язык Ruby версии 1.9.
 
+\subsection{Язык программирования Ruby}
+
+\subsubsection{Парадигма}
+
+Ruby — полностью объектно-ориентированный язык. В нём все данные являются
+объектами, в отличие от многих других языков, где существуют примитивные типы.
+Каждая функция — метод. Переменные Ruby содержат не сами объекты, а ссылки на
+них. Присваивание — это не передача значения, а копирование ссылки на
+объект\cite{ruby}.
+
+Ruby не поддерживает множественное наследование, но вместо него есть мощный
+механизм примесей. Все классы (напрямую или через другие классы) выведены из
+класса \texttt{Object}, следовательно, любой объект может использовать
+определённые в нем методы (например, \texttt{class}, \texttt{to\_s},
+\texttt{nil?}). Процедурный стиль также поддерживается, но все глобальные
+процедуры неявно являются закрытыми методами класса \texttt{Object}.
+
+Ruby является мультипарадигменным языком: он поддерживает процедурный стиль
+(определение функций и переменных вне классов), объектно-ориентированный
+(всё — объект), функциональный (анонимные функции, замыкания, возврат значения
+всеми инструкциями, возврат функцией последнего вычисленного значения).
+Он поддерживает отражение, метапрограммирование, информацию о типах переменных
+на стадии выполнения.
+
+Возможности Ruby \cite{ruby}:
+\begin{itemize}
+  \item Имеет лаконичный и простой синтаксис, частично разработанный под
+  \item Позволяет обрабатывать исключения в стиле Java и Python.
+  \item Позволяет переопределять операторы, которые на самом деле являются
+        методами.
+  \item Полностью объектно-ориентированный язык программирования. Все данные в
+        Ruby являются объектами в понимании Smalltalk.
+        Единственное исключение — управляющие конструкции, которые в Ruby в 
+        отличие от Smalltalk не являются объектами. Например, число \texttt{1} —
+        это экземпляр класса \texttt{Fixnum}. Также поддерживается добавление 
+        методов в класс и даже в конкретный экземпляр во время выполнения
+        программы.
+  \item Не поддерживает множественное наследование, но вместо него может
+        использоваться концепция «примесей», основанная в данном языке на
+        механизме модулей.
+  \item Содержит автоматический сборщик мусора. Он работает для всех объектов
+        Ruby, в том числе для внешних библиотек.
+  \item Создавать расширения для Ruby на C очень просто частично из-за
+        сборщика мусора, частично из-за несложного и удобного API.
+  \item Поддерживает замыкания с полной привязкой к переменным.
+  \item Поддерживает блоки кода (код заключается в \texttt{\{ \ldots \}} или 
+        \texttt{do \ldots end}). Блоки могут использоваться в методах или
+        преобразовываться в замыкания.
+  \item Целые переменные в Ruby автоматически конвертируются между типами
+        \texttt{Fixnum} (32-разрядные) и \texttt{Bignum} (больше 32 разрядов) в
+        зависимости от их значения, что позволяет производить целочисленные
+        математические расчёты с бесконечной точностью.
+  \item Не требует предварительного объявления переменных, но для интерпретатора
+        желательно, чтобы переменным присваивалось пустое значение \texttt{nil}
+        (тогда интерпретатор знает, что идентификатор обозначает переменную, а
+        не имя метода). Язык использует простые соглашения для обозначения
+        области видимости. Пример: просто \texttt{var} — локальная переменная,
+        \texttt{@var} — переменная экземпляра (член или поле объекта класса),
+        \texttt{@@var} — переменная класса, \texttt{\$var} — глобальная
+        переменная.
+  \item В Ruby непосредственно в языке реализованы многие шаблоны
+        проектирования, так, например, «одиночка» (Singleton) может быть (хотя и
+        не обязан) реализован добавлением необходимых методов к одному
+        конкретному объекту.
+  \item Может динамически загружать расширения, если это позволяет операционная
+        система.
+  \item Имеет независимую от ОС поддержку невытесняющей многопоточности.
+  \item Перенесён на множество платформ. Он разрабатывался на GNU/Linux, но
+        работает на многих версиях Unix, DOS, Microsoft Windows (в частности,
+        Win32), Mac OS X, BeOS, OS/2 и т. д.
+\end{itemize}
+
+\subsubsection{Пример}
+В Ruby все классы являются открытыми, поэтому можно расширить стандартные классы
+с помощью дополнительных методов. В следующем примере, мы расширим класс
+\texttt{Array} методом \texttt{at\_rand}, который будет возвращать случайный
+элемент массива, при этом, если массив \emph{n}-размерный, то в результате
+\emph{n} обращений к этому методу, каждый элемент вернется единожды. Данный
+метод пригодится как внешний итератор для последовательного случайного перебора
+элементов массива.
+
+\begin{verbatim}
+  class Array
+    def at_rand
+      @not_picked = self.sort_by { rand } if @not_picked.empty?
+      @not_picked.pop
+    end
+  end  
+\end{verbatim}
+
+Следующий пример позволяет значительно упростить добавление методов для высчета
+функции и их производных, он будет использоваться для задания функций активации
+в программе: 
+
+\begin{verbatim}
+module DerivativeFunctions
+  def self.create_function(name, function, derivative)
+    define_method name do |value|
+      y = function.call x
+    
+      case value
+      when :function then y
+      when :derivative then derivative.call y
+      else
+        raise 'Unknown type of function'
+      end
+    end
+  end
+end
+\end{verbatim}
+
 \newpage
 \section{Список литературы}
 
@@ -308,6 +419,9 @@ end
   \bibitem{shalyto}
     Царев Ф.Н., Шалыто А.А. Применение генетического программирования для
     построения автоматов, управляющих системами со сложным поведением. — 2007
+  
+  \bibitem{ruby}
+      Flanagan D., Matsumoto Y. The Ruby Programming Language. — M.: O'Reilly, 2008
 
 \end{thebibliography}
 
