Перешёл на класс документа eskd

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -1,9 +1,7 @@
-\documentclass[a4paper,14pt]{extarticle}
-\usepackage[utf8]{inputenc}
-\usepackage[russian]{babel}
-\usepackage{indentfirst}
+\documentclass[russian,utf8]{eskdtext}
+\usepackage{eskdplain}
 
-\renewcommand{\baselinestretch}{1.5}
+\setcounter{tocdepth}{2}
 
 \usepackage{geometry}
 \geometry{left=3cm}
@@ -394,9 +392,6 @@ end
 \end{verbatim}
 
 \newpage
-\section{Список литературы}
-
-\renewcommand*{\refname}{}
 \begin{thebibliography}{}
 
   \bibitem{communication}
