Добавлен раздел о синтаксисе Ruby и связи его с синтаксисом D2NA

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -253,25 +253,35 @@ end
 \section{Программная реализация}
 
 \subsection{Средства разработки}
+
+Разработка велась на операционной системе Linux, поскольку являясь UNIX-подобной
+операционной системой она обладает целым набором полезным инструментов для
+разработки и позволяет программировать быстро и эффективно. Поэтому $D^2NA$
+разрабатывалась в духе идеологии UNIX.
+
+При разработке использовалась система контроля версий Git, а исходный код с
+историей изменения был опубликован на открытом ресурсу
+\texttt{http://github.com/ai/d2na} в Интернете.
+
 Для разработки $D^2NA$ требовался язык удовлетворяющий следующим критериям:
 \begin{itemize}
-  \item {\bf Скорость разработки}. Сначала нужно написать систему грубо и
+  \item \textbf{Скорость разработки}. Сначала нужно написать систему грубо и
         максимально быстро для проверки идеи. А потом, в случае успеха, уже
         можно оптимизировать систему и переписывать критические блоки на языки
         более низкого уровня, такие как C или Java.
-  \item {\bf Гибкость.} Цель $D^2NA$ — создание инструмента для изучения и
+  \item \textbf{Гибкость.} Цель $D^2NA$ — создание инструмента для изучения и
         экспериментов с генетическими алгоритмами, поэтому язык и платформа
         должна быть гибкой, чтобы вносить изменения максимально быстро и легко.
-  \item {\bf Свободный синтаксис.} Желательно, чтобы синтаксис языка $D^2NA$ был
+  \item \textbf{Свободный синтаксис.} Желательно, чтобы синтаксис языка $D^2NA$ был
         просто подсинтаксисом (DSL, Domain-Specific Language) языка разработки
         генератора, чтобы не писать отдельный интерпретатор.
-  \item {\bf Кроссплатформенностью.} Язык разработки не должен быть привязан к
+  \item \textbf{Кроссплатформенностью.} Язык разработки не должен быть привязан к
         определённой операционной системе или интегрированной среде разработки.
         Результат работы должен запускаться на любой из распространённой
         операционной системе (Windows, Mac OS X, Linux) без перекомпиляции.
         Желательно, чтобы разработку можно было вести использую обычный
         текстовой редактор и простой набор скриптов.
-  \item {\bf Автоматическое тестирование.} Поскольку в рамках проекта
+  \item \textbf{Автоматическое тестирование.} Поскольку в рамках проекта
         разрабатывался набор утилит (а не конечный продукт с графическим
         интерфейсом пользователя), то лучше всего подходит автоматическое
         тестирование, желательно с применение подхода BDD (Behavior Driven
@@ -390,6 +400,94 @@ module DerivativeFunctions
   end
 end
 \end{verbatim}
+
+\subsubsection{Синтаксис}
+
+Ruby выделяет тем, что обладает довольно гибким синтаксисом:
+\begin{itemize}
+  \item точка с запятой \texttt{;} необязательна, если команды разделены
+        переводом строки;
+  \item скобки \texttt{()} необязательна после метода, поскольку в Ruby нельзя
+        обращаться к свойствам класса без вызова метода.
+\end{itemize}
+
+Например следующий код:
+
+\begin{verbatim}
+code.method(1, 2);
+\end{verbatim}
+
+Равносилен коду:
+
+\begin{verbatim}
+code.method 1, 2
+\end{verbatim}
+
+Так же Ruby обладает рядом удобных инструментов, упрощающих синтаксис:
+\begin{itemize}
+  \item Методу в качестве аргументов можно передать не только значения, но и
+        другой код, заключив его между \texttt{do end} после вызова метода.
+  \item Строка начатая с двоеточки \texttt{:} будет хранится в программе, как
+        число (Symbol). При этом, строки с одинаковыми значениями будут иметь
+        один номер. В итоге, сравнение и хранение Symbol значительно более
+        эффективно. Можно сказать, что Symbol является удобной заменой констант
+        и Enum из более низкоуровневых языков программирования.
+\end{itemize}
+
+Так что следующий код:
+\begin{verbatim}
+on(:Init) do
+  puts 1
+end
+\end{verbatim}
+
+Вызывает метод \texttt{on} с двумя аргументами:
+\begin{itemize}
+  \item Symbol-строкой со значением «Init»;
+  \item Кодов, который печатает 1 (\texttt{puts 1}).
+\end{itemize}
+
+\subsection{Анализ $D^2NA$}
+
+В итоге, как можно заметить, синтаксис $D^2NA$ — это просто подсинтаксис
+(DSL, Domain-Specific Language) языка программирования Ruby.
+
+Рассмотрим программу на $D^2NA$:
+\begin{verbatim}
+on :Init do
+  up :var
+end
+
+on :Input, :var do
+  send :Output
+  down :var
+end
+\end{verbatim}
+
+В Ruby точка с запятой и скобки после имени метода являются необязательными,
+подставим их в пример:
+\begin{verbatim}
+on(:Init) do
+  up(:var);
+end;
+
+on(:Input, :var) do
+  send(:Output);
+  down(:var);
+end;
+\end{verbatim}
+
+В итоге получается обычный Ruby-код в котором два раза вызывается метод
+\texttt{on}:
+\begin{enumerate}
+  \item В первом случае он получает два аргумента: Symbol-строку «Init» и код,
+        в котором выполняется метод \texttt{up} с параметром «var».
+  \item Во втором случае метод \texttt{on} получается три аргумента: две
+        Symbol-строки «Input» и «var» и код, который вызывает метод
+        \texttt{send} с параметром «Output» и \texttt{down} с параметром «var».
+\end{enumerate}
+
+  
 
 \newpage
 \begin{thebibliography}{}
