Добавил Анализ в Обзоре языка D2NA

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -171,6 +171,72 @@ $x_{ij}$ соответствует весу связи от нейрона $i$ 
 \end{itemize}
 
 \section{Обзор языка $D^2NA$}
+
+\subsection{Анализ}
+Поскольку целью работы является создания понятного и удобного представления
+алгоритма для человека, то за основу возьмём современный высокоуровневый язык
+программирования.
+
+Первая проблема, которая усложняет случайные изменения в алгоритме —
+иерархичность. Уберём её, представив программу в виде набора
+условных операторов (\texttt{if}) внутри одного большого постоянного цикла
+(\texttt{while}):
+
+\begin{verbatim}
+while (true) {
+  if (…) {
+    …
+  }
+  if (…) {
+    …
+  }
+}
+\end{verbatim}
+
+Будем создавать \texttt{if}-оператор для каждого возможного условия. Чтобы
+условных операторов было слишком много, ограничим возможные условия проверки:
+\begin{itemize}
+  \item поступление внешнего сигнала;
+  \item переменная имеет значение больше нуля;
+\end{itemize}
+
+\begin{verbatim}
+while (true) {
+  if (on_siganl('Input')) {
+    …
+  }
+  if (on_siganl('Input') && a > 0) {
+    …
+  }
+  if (a > 0) {
+    …
+  }
+}
+\end{verbatim}
+
+Чтобы упростить внесение случайных изменений, уменьшим количество возможных
+команд:
+\begin{itemize}
+  \item увеличение переменой на единицу;
+  \item уменьшение переменой на единицу;
+  \item отправка исходящего сигнала;
+\end{itemize}
+
+\begin{verbatim}
+while (true) {
+  if (on_siganl('Input')) {
+    a += 1;
+  }
+  if (on_siganl('Input') && a > 0) {
+    send('Output');
+    a -= 1;
+    a -= 1;
+  }
+  if (a > 0) { }
+}
+\end{verbatim}
+
+\subsection{Описания языка}
 В рамках данной работы был создан особый язык программирования $D^2NA$.
 
 Программа на $D^2NA$ с внешним миром общается с помощью входящих и исходящих
