Добавил раздел Архитектура генератора с введением о разделении на два пакета

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -316,6 +316,21 @@ end
 и к нему легко применять множество инструментов для анализа текста (например,
 смотреть различия с помощью UNIX-программы \texttt{diff}).
 
+\section{Архитектура генератора}
+
+Инструментарий для $D^2NA$ состоит из двух пакетов:
+\begin{itemize}
+  \item виртуальной машины для запуска уже готовых программ на $D^2NA$;
+  \item генератора, который с помощью генетических алгоритмов создаёт новую
+        программу на $D^2NA$;
+\end{itemize}
+
+Такой ход позволит упростить разделение разработки программы и её использования.
+Например, на сервер, где программа на $D^2NA$ будет выполняться можно поставить
+только виртуальную машину, а на компьютер разработчика, который будет задавать
+оценочную функцию и следить за ходом генерации, нужно поставить и генератор и
+виртуальную машину.
+
 \section{Программная реализация}
 
 \subsection{Средства разработки}
